# app/Http/Requests/StoreCompteRequest.php
@@ -16,7 +16,7 @@ class StoreCompteRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'type' => ['required', 'in:cheque,courant,epargne,bloqué'],
+            'type' => ['required', 'in:cheque,courant,epargne'],
             'soldeInitial' => ['required', 'numeric', 'min:10000'],
             'devise' => ['required', 'in:FCFA,XOF,EUR,USD'],
             'solde' => ['nullable', 'numeric'],
@@ -34,7 +34,7 @@ class StoreCompteRequest extends FormRequest
     {
         return [
             'type.required' => 'Le type de compte est obligatoire.',
-            'type.in' => 'Le type doit être "cheque", "courant", "epargne" ou "bloqué".',
+            'type.in' => 'Le type doit être "cheque", "courant" ou "epargne".',
             'soldeInitial.required' => 'Le solde initial est obligatoire.',
             'soldeInitial.numeric' => 'Le solde initial doit être un nombre.',
             'soldeInitial.min' => 'Le solde initial doit être d\'au moins 10 000 FCFA.',
